--- a/app/public/wp-content/themes/amera/style.css
+++ b/app/public/wp-content/themes/amera/style.css
@@ -574,11 +574,13 @@ a.button-custom {
   text-transform: none;
   padding:6px 17px 8px 17px;
   display:inline-block;
+  font-weight: 500;
 }
 
 a.button-custom:hover {
   color:white;
   background: rgb(25, 83, 170);
+  cursor: pointer;
 }
 
 ul.navbar-nav > a.button-custom {
@@ -689,7 +691,7 @@ position: relative;
 height:450px;
 background: 
 linear-gradient(to top, rgba(195, 246, 255, 0.4), rgb(255, 255, 255,0.0) 100%),
-url("/wp-content/themes/amerau/assets/img/hero/default.jpg");
+url("/wp-content/themes/amera/assets/img/hero/default.jpg");
 background-blend-mode: hard-light;
 background-size: cover;
 background-position: 50% 35%;
@@ -701,7 +703,7 @@ background-position: 50% 35%;
   height:290px;
   background: 
   linear-gradient(to right, rgba(146, 83, 209, 0.7), rgba(36, 124, 255, 0.7) 150%),
-  url("/wp-content/themes/amerau/assets/img/hero/default2.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/default2.jpg");
   background-blend-mode: multiply;
   background-size: cover;
   background-position: 50% 65%;
@@ -710,7 +712,7 @@ background-position: 50% 35%;
 .header-1031 {
   background: 
   linear-gradient(to top, rgba(197, 237, 255, 0.8), rgba(195, 219, 255, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/1031.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/1031.jpg");
   background-size: cover;
   background-position: 90% 5%;
   background-blend-mode: luminosity;
@@ -719,7 +721,7 @@ background-position: 50% 35%;
 .header-about {
   background: 
   linear-gradient(to top, rgba(197, 237, 255, 0.8), rgba(195, 219, 255, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/about.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/about.jpg");
   background-size: cover;
   background-position: 50% 55%;
   background-blend-mode: hard-light;
@@ -728,7 +730,7 @@ background-position: 50% 35%;
 .header-article {
   background: 
   linear-gradient(to top, rgba(236, 255, 224, 0.8), rgba(195, 219, 255, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/article.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/article.jpg");
   background-size: cover;
   background-position: 50% 40%;
   background-blend-mode: hard-light;
@@ -737,7 +739,7 @@ background-position: 50% 35%;
 .header-faq {
   background: 
   linear-gradient(to top, rgba(255, 255, 255, 0.9), rgba(121, 153, 194, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/faq.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/faq.jpg");
   background-size: cover;
   background-position: 50% 40%;
   background-blend-mode: luminosity;
@@ -746,7 +748,7 @@ background-position: 50% 35%;
 .header-glossary {
   background: 
   linear-gradient(to top, rgba(222, 250, 255, 0.808), rgba(187, 217, 255, 0.1) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/glossary.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/glossary.jpg");
   background-size: cover;
   background-position: 50% 90%;
   background-blend-mode: hard-light;
@@ -755,7 +757,7 @@ background-position: 50% 35%;
 .header-history {
   background: 
   linear-gradient(to top, rgba(250, 222, 255, 0.5), rgba(187, 217, 255, 0.1) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/history.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/history.jpg");
   background-size: cover;
   background-position: 50% 10%;
   background-blend-mode: hard-light;
@@ -764,7 +766,7 @@ background-position: 50% 35%;
 .header-investments {
   background: 
   linear-gradient(to top, rgba(216, 255, 234, 0.9), rgba(187, 217, 255, 0.1) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/investments.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/investments.jpg");
   background-size: cover;
   background-position: 50% 40%;
   background-blend-mode: hard-light;
@@ -773,7 +775,7 @@ background-position: 50% 35%;
 .header-offering {
   background: 
   linear-gradient(to top, rgba(255, 160, 160, 0.6), rgba(255, 212, 187, 0.5) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/offering.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/offering.jpg");
   background-size: cover;
   background-position: 50% 100%;
   background-blend-mode: luminosity;
@@ -782,7 +784,7 @@ background-position: 50% 35%;
 .header-offering2 {
   background: 
   linear-gradient(to top, rgba(224, 224, 211, 0.7), rgba(255, 212, 187, 0.5) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/offering2.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/offering2.jpg");
   background-size: cover;
   background-position: 50% 40%;
   background-blend-mode: hard-light;
@@ -791,7 +793,7 @@ background-position: 50% 35%;
 .header-opportunityfund {
   background: 
   linear-gradient(to top, rgba(228, 255, 255, 0.8), rgba(255, 212, 187, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/opportunityfund.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/opportunityfund.jpg");
   background-size: cover;
   background-position: 50% 0%;
   background-blend-mode: luminosity;
@@ -800,7 +802,7 @@ background-position: 50% 35%;
 .header-partners {
   background: 
   linear-gradient(to top, rgba(41, 128, 128, 0.8), rgba(255, 212, 187, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/partners.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/partners.jpg");
   background-size: cover;
   background-position: 50% 0%;
   background-blend-mode: screen;
@@ -809,7 +811,7 @@ background-position: 50% 35%;
 .header-privacy {
   background: 
   linear-gradient(to top, rgba(41, 128, 128, 0.8), rgba(255, 212, 187, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/privacy.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/privacy.jpg");
   background-size: cover;
   background-position: 50% 40%;
   background-blend-mode: screen;
@@ -818,7 +820,7 @@ background-position: 50% 35%;
 .header-resources {
   background: 
   linear-gradient(to top, rgba(41, 128, 128, 0.8), rgba(255, 212, 187, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/resources.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/resources.jpg");
   background-size: cover;
   background-position: 50% 55%;
   background-blend-mode: overlay;
@@ -827,7 +829,7 @@ background-position: 50% 35%;
 .header-rules {
   background: 
   linear-gradient(to top, rgba(166, 233, 233, 0.8), rgba(255, 212, 187, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/rules.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/rules.jpg");
   background-size: cover;
   background-position: 50% 0%;
   background-blend-mode: luminosity;
@@ -836,7 +838,7 @@ background-position: 50% 35%;
 .header-service {
   background: 
   linear-gradient(to top, rgba(166, 233, 233, 0.8), rgba(255, 212, 187, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/service.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/service.jpg");
   background-size: cover;
   background-position: 50% 0%;
   background-blend-mode: luminosity;
@@ -845,7 +847,7 @@ background-position: 50% 35%;
 .header-taxadvantage {
   background: 
   linear-gradient(to top, rgba(166, 233, 233, 0.8), rgba(255, 212, 187, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/taxadvantage.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/taxadvantage.jpg");
   background-size: cover;
   background-position: 50% 80%;
   background-blend-mode: luminosity;
@@ -854,7 +856,7 @@ background-position: 50% 35%;
 .header-terms {
   background: 
   linear-gradient(to top, rgba(166, 233, 233, 0.8), rgba(255, 212, 187, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/terms.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/terms.jpg");
   background-size: cover;
   background-position: 50% 70%;
   background-blend-mode: luminosity;
@@ -863,7 +865,7 @@ background-position: 50% 35%;
 .header-whyrealestate {
   background: 
   linear-gradient(to top, rgba(177, 247, 247, 0.8), rgba(255, 212, 187, 0.3) 100%),
-  url("/wp-content/themes/amerau/assets/img/hero/whyrealestate.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/whyrealestate.jpg");
   background-size: cover;
   background-position: 50% 0%;
   background-blend-mode: luminosity;
@@ -1036,11 +1038,13 @@ img.img--stat {
   font-size:18px;
   position:relative;
   bottom:3px;
+  font-weight:500;
+  vertical-align: middle;
 }
 
 .footer-email>*>*>a:hover {
   color: #382C44;
-  vertical-align: middle;
+  
 }
 
 .footer-social {
@@ -1052,51 +1056,51 @@ img.img--stat {
 }
 
 .footer-social-email {
-  background: url("/wp-content/themes/amerau/assets/img/svg/social-email-outline.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/social-email-outline.svg");
 }
 
 .footer-social-email:hover {
-  background: url("/wp-content/themes/amerau/assets/img/svg/social-email-filled.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/social-email-filled.svg");
 }
 
 .footer-social-twitter {
-  background: url("/wp-content/themes/amerau/assets/img/svg/001-twitter-social-outlined-logo.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/001-twitter-social-outlined-logo.svg");
 }
 
 .footer-social-twitter:hover {
-  background: url("/wp-content/themes/amerau/assets/img/svg/001-twitter-social-filled-logo.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/001-twitter-social-filled-logo.svg");
 }
 
 .footer-social-fb {
-  background: url("/wp-content/themes/amerau/assets/img/svg/002-facebook-logo-outline.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/002-facebook-logo-outline.svg");
 }
 
 .footer-social-fb:hover {
-  background: url("/wp-content/themes/amerau/assets/img/svg/002-facebook-logo-filled.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/002-facebook-logo-filled.svg");
 }
 
 .footer-social-youtube {
-  background: url("/wp-content/themes/amerau/assets/img/svg/social-youtube-outlined.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/social-youtube-outlined.svg");
 }
 
 .footer-social-youtube:hover {
-  background: url("/wp-content/themes/amerau/assets/img/svg/social-youtube-filled.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/social-youtube-filled.svg");
 }
 
 .footer-social-linkedin {
-  background: url("/wp-content/themes/amerau/assets/img/svg/social-linkedin-outline.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/social-linkedin-outline.svg");
 }
 
 .footer-social-linkedin:hover {
-  background: url("/wp-content/themes/amerau/assets/img/svg/social-linkedin-filled.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/social-linkedin-filled.svg");
 }
 
 .footer-social-insta {
-  background: url("/wp-content/themes/amerau/assets/img/svg/social-instagram-outlined.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/social-instagram-outlined.svg");
 }
 
 .footer-social-insta:hover {
-  background: url("/wp-content/themes/amerau/assets/img/svg/social-instagram-filled.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/social-instagram-filled.svg");
 }
 
 .footer-ul {
@@ -1337,7 +1341,7 @@ img.img--stat {
 
 .tax-benefits {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.0), rgb(0, 0, 0,.7) 90%),
-  url("/wp-content/themes/amerau/assets/img/hero/default.jpg");
+  url("/wp-content/themes/amera/assets/img/hero/default.jpg");
   background-size: cover;
   background-position: 50% 35%;
 }
@@ -1584,7 +1588,7 @@ img.img--stat {
   
   background: 
   /*linear-gradient(to right, rgba(255, 255, 255, 0.0), rgb(255, 255, 255,.9) 90%),*/
-  url("/wp-content/themes/amerau/assets/img/landing-la5.jpg");
+  url("/wp-content/themes/amera/assets/img/landing-la5.jpg");
   background-size: cover;
   background-position: 50% 35%;
 }
@@ -1641,7 +1645,7 @@ img.img--stat {
 }
 
 .past-inv--section {
-  background: url("/wp-content/themes/amerau/assets/img/svg/svg-usa-2.svg");
+  background: url("/wp-content/themes/amera/assets/img/svg/svg-usa-2.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: calc(0px + 55vw) calc(100px + 5vh);
@@ -1850,7 +1854,7 @@ img.img--stat {
 }
 
 .fund-aaa-intro-lead-section {
-    background: url("/wp-content/themes/amerau/assets/img/renderings/rendering-1.jpg");
+    background: url("/wp-content/themes/amera/assets/img/renderings/rendering-1.jpg");
     background-size: calc(300px + 50vw);
     background-repeat: no-repeat;
     background-position: calc(0px + 55vw) calc(0px + 5vh);
