Change to americangroup.us

--- a/app/public/wp-content/themes/amera/assets/scss/_color.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/_color.scss
@@ -8,6 +8,7 @@ $purplePrime : #770ce2;
 $purpleSecond : #380f63;
 
 $fontDark : #130f0d;
+$fontMedDark : #2b2725;
 $fontLight : #73787F;
 $fontLightFooter : #aaaaaa;
 
