--- a/app/public/wp-content/themes/amera/assets/scss/_typography.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/_typography.scss
@@ -39,7 +39,7 @@ h5 {
 }
 
 h6 {
-  font-size: calc(17px + 0.1vw);
+  font-size: calc(16px + 0.1vw);
   line-height: calc(1.3em + 0.3vw);
 }
 
@@ -73,6 +73,11 @@ ul {
   list-style-type: none;
 }
 
+figcaption {
+  font-family: 'Source Sans Pro', sans-serif;
+  color: grey;
+}
+
 .big-font {
   font-size: 7.5em;
   font-weight: 700;
@@ -98,3 +103,6 @@ a.color-blue:hover {
   font-family: Georgia, serif;
 }
 
+.color-black {
+  color: black;
+}
