--- a/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
@@ -27,7 +27,7 @@
   url("/wp-content/themes/amera/assets/img/hero/default.jpg");
   background-blend-mode: hard-light;
   background-size: cover;
-  background-position: 50% 35%;
+  background-position: 50% 67%;
   }
   
   .header-secondary {
@@ -61,6 +61,15 @@
   }
   
   .header-article {
+    background: 
+    linear-gradient(to top, rgba(236, 255, 224, 0.8), rgba(195, 219, 255, 0.3) 100%),
+    url("/wp-content/themes/amera/assets/img/hero/article.jpg");
+    background-size: cover;
+    background-position: 50% 40%;
+    background-blend-mode: hard-light;
+  }
+
+  .header-article-2 {
     background: 
     linear-gradient(to top, rgba(236, 255, 224, 0.8), rgba(195, 219, 255, 0.3) 100%),
     url("/wp-content/themes/amera/assets/img/hero/article.jpg");
