--- a/app/public/wp-content/themes/amera/assets/scss/components/_nav.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_nav.scss
@@ -100,22 +100,22 @@ li.nav-item:hover {
   border-radius: 0;
   border-bottom: 1px rgba(200, 200, 200, 1) solid;
   margin-top: 1px;
-  padding-bottom: 35px;
+  padding-bottom: 10px;
   box-shadow: 0px 4px 5px -3px rgba(0,0,0,.15);
+  margin-bottom:10px;
+}
+
+@media (min-width:992px) {
+  .dropdown-menu-custom {
+    padding-bottom: 35px;
+  }
 }
 
 @media (max-width: 992px) {
   .dropdown-menu{
-        height:280px;
         padding-top: 0px;
      }
   }
-
-  @media (max-width: 768px) {
-    .dropdown-menu{
-          height:200px;
-       }
-    }
 
 @media (max-width: 992px) {
   .dropdown-row > *, .dropdown-row > * > .dropdown-item {
@@ -140,8 +140,6 @@ li.nav-item:hover {
   box-shadow: 0 3px 3px 0px rgba(0,0,0,0.3);
 }
 
-@media (max-width: 992px){
-  .dropdown-button {
-    margin-bottom: 1rem !important;
-  }
+.dropdown-row>.col-12 {
+  padding-bottom: 10px;
 }
