--- a/app/public/wp-content/themes/amera/assets/scss/components/_nav.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_nav.scss
@@ -143,3 +143,8 @@ li.nav-item:hover {
 .dropdown-row>.col-12 {
   padding-bottom: 10px;
 }
+
+.nav-link:active,
+.nav-link:focus {
+  outline:none;
+}
