--- a/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
@@ -23,9 +23,9 @@
   position: relative;
   height:450px;
   background: 
-  linear-gradient(to top, rgba(195, 246, 255, 0.4), rgba(133, 127, 127, 0) 100%),
-  url("/wp-content/themes/amera/assets/img/hero/defaulttt.jpg");
-  background-blend-mode: hard-light;
+  //linear-gradient(90deg, rgba(52, 147, 255, 0.534), rgba(241, 114, 105, 0.534) 100%),
+  url("/wp-content/themes/amera/assets/img/hero/home-2.jpg");
+  background-blend-mode: normal;
   background-size: cover;
   background-position: 50% 50%;
   }
