--- a/app/public/wp-content/themes/amera/assets/scss/style.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/style.scss
@@ -202,13 +202,19 @@ img.img--stat {
   color:white;
   font-weight:400;
   padding:10px;
-  transition: all .3s ;
   box-shadow: 0px 3px 3px 0px rgba(0,0,0,.3);
 }
 
 .img-link:hover {
   color:rgba(255, 255, 255, 0.7);
   font-weight: 400;
+}
+
+.hover-rise {
+  transition: all .3s ;
+}
+
+.hover-rise:hover {
   transform: translateY(-6px);
 }
 
@@ -268,7 +274,7 @@ img.img--stat {
   width:100%;
   min-height:200px;
   border-radius: 2px;
-  background: linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.6) 60%);
+  background: linear-gradient(90deg, rgb(52, 147, 255), rgba(241, 114, 105, 0.336) 100%),
 }
 
 .img-link--img {
@@ -849,4 +855,20 @@ ul.sponsor-list li {
 
 .dist-table td {
   padding: 5px 10px;
+}
+
+.left-bar-red {
+  width:10px;
+  background-color: $redPrime;
+  height:100%;
+  position: absolute;
+  top:0;
+  left:15px;
+  z-index: 1000;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+}
+
+.section-home-video {
+  box-shadow: $boxShadow;
 }
