--- a/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
@@ -125,20 +125,19 @@
   
   .header-investments {
     background: 
-    linear-gradient(to top, rgba(216, 255, 234, 0.9), rgba(187, 217, 255, 0.1) 100%),
+    //linear-gradient(90deg, rgb(52, 147, 255), rgba(241, 114, 105, 0.336) 100%),
     url("/wp-content/themes/amera/assets/img/hero/investments.jpg");
     background-size: cover;
-    background-position: 50% 40%;
-    background-blend-mode: hard-light;
+    background-position: 50% 0%;
+    //background-blend-mode: hard-light;
   }
   
   .header-offering {
     background: 
-    linear-gradient(to top, rgba(255, 160, 160, 0.6), rgba(255, 212, 187, 0.5) 100%),
+    linear-gradient(90deg, rgba(52, 147, 255, 1), rgba(52, 147, 255, 0.0) 100%),
     url("/wp-content/themes/amera/assets/img/hero/offering.jpg");
     background-size: cover;
-    background-position: 50% 100%;
-    background-blend-mode: luminosity;
+    background-position: 50% 40%;
   }
   
   .header-offering2 {
@@ -152,7 +151,7 @@
   
   .header-opportunityfund {
     background: 
-    linear-gradient(to top, rgba(228, 255, 255, 0.8), rgba(255, 212, 187, 0.3) 100%),
+    //linear-gradient(to top, rgba(228, 255, 255, 0.8), rgba(255, 212, 187, 0.3) 100%),
     url("/wp-content/themes/amera/assets/img/hero/opportunityfund.jpg");
     background-size: cover;
     background-position: 50% 0%;
