--- a/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
@@ -203,11 +203,10 @@
   
   .header-taxadvantage {
     background: 
-    linear-gradient(to top, rgba(166, 233, 233, 0.8), rgba(255, 212, 187, 0.3) 100%),
+    linear-gradient(90deg, rgba(52, 147, 255,1.0), rgba(52, 147, 255, 0.0) 100%),
     url("/wp-content/themes/amera/assets/img/hero/taxadvantage.jpg");
     background-size: cover;
     background-position: 50% 80%;
-    background-blend-mode: luminosity;
   }
   
   .header-terms {
