--- a/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
@@ -124,10 +124,10 @@
   
   .header-investments {
     background: 
-    linear-gradient(90deg, rgba(52, 147, 255,.9), rgba(52, 147, 255, 0.0) 100%),
+    //linear-gradient(90deg, rgba(52, 147, 255,.9), rgba(52, 147, 255, 0.0) 100%),
     url("/wp-content/themes/amera/assets/img/hero/investments.jpg");
     background-size: cover;
-    background-position: 50% 0%;
+    background-position: 50% 50%;
     //background-blend-mode: hard-light;
   }
   
@@ -150,7 +150,7 @@
   
   .header-opportunityfund {
     background: 
-    linear-gradient(90deg, rgba(52, 147, 255,.9), rgba(52, 147, 255, 0.0) 100%),
+    //linear-gradient(90deg, rgba(52, 147, 255,.9), rgba(52, 147, 255, 0.0) 100%),
     url("/wp-content/themes/amera/assets/img/hero/opportunityfund.jpg");
     background-size: cover;
     background-position: 50% 0%;
@@ -194,11 +194,11 @@
   
   .header-service {
     background: 
-    linear-gradient(to top, rgba(166, 233, 233, 0.8), rgba(255, 212, 187, 0.3) 100%),
+    //linear-gradient(to top, rgba(166, 233, 233, 0.8), rgba(255, 212, 187, 0.3) 100%),
     url("/wp-content/themes/amera/assets/img/hero/service.jpg");
     background-size: cover;
-    background-position: 50% 0%;
-    background-blend-mode: luminosity;
+    background-position: 50% 50%;
+    //background-blend-mode: luminosity;
   }
   
   .header-taxadvantage {
