--- a/app/public/wp-content/themes/amera/assets/scss/_color.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/_color.scss
@@ -1,5 +1,5 @@
-$bluePrime : #00b6ff;
-$blueSecond : #3493ff;
+$bluePrime : rgb(0, 182, 255);
+$blueSecond : rgb(52, 147, 255);
 
 $redPrime : #f17269;
 $redSecond : #cf4238;
