--- a/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
@@ -22,33 +22,23 @@
 .header-primary {
   position: relative;
   height:450px;
-  background: 
-  //linear-gradient(90deg, rgba(52, 147, 255, 0.534), rgba(241, 114, 105, 0.534) 100%),
-  url("/wp-content/themes/amera/assets/img/hero/home.jpg");
-  background-blend-mode: normal;
-  background-size: cover;
-  background-position: 50% 50%;
   }
   
   .header-secondary {
-    color: white;
+    background:
+    linear-gradient(90deg, rgb(0, 182, 255),rgb(52, 147, 255) 100%);
+    color:white;
     position: relative;
     height:290px;
-    background: 
-    linear-gradient(to right, rgba(146, 83, 209, 0.7), rgba(36, 124, 255, 0.7) 150%),
-    url("/wp-content/themes/amera/assets/img/hero/default2.jpg");
-    background-blend-mode: multiply;
-    background-size: cover;
-    background-position: 50% 65%;
   }
   
   .header-1031 {
     background: 
-    linear-gradient(to top, rgba(197, 237, 255, 0.8), rgba(195, 219, 255, 0.3) 100%),
+    //linear-gradient(to top, rgba(197, 237, 255, 0.8), rgba(195, 219, 255, 0.3) 100%),
     url("/wp-content/themes/amera/assets/img/hero/1031.jpg");
     background-size: cover;
-    background-position: 90% 5%;
-    background-blend-mode: luminosity;
+    background-position: 50% 50%;
+    //background-blend-mode: luminosity;
   }
   
   .header-about {
@@ -133,7 +123,7 @@
   
   .header-offering {
     background: 
-    linear-gradient(90deg, rgba(52, 147, 255, 1), rgba(52, 147, 255, 0.0) 100%),
+    linear-gradient(90deg, rgb(52, 147, 255), rgba(52, 147, 255, 0) 100%),
     url("/wp-content/themes/amera/assets/img/hero/offering.jpg");
     background-size: cover;
     background-position: 50% 40%;
@@ -179,7 +169,7 @@
     linear-gradient(to top, rgba(41, 128, 128, 0.8), rgba(255, 212, 187, 0.3) 100%),
     url("/wp-content/themes/amera/assets/img/hero/resources.jpg");
     background-size: cover;
-    background-position: 50% 55%;
+    background-position: 50% 40%;
     background-blend-mode: overlay;
   }
   
