--- a/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
@@ -17,11 +17,13 @@ padding: 0px 15px;
 border: none;
 height:40px;
 width: 260px;
+margin-bottom: 10px;
 }
 
 .header-primary {
 position: relative;
 height:450px;
+text-shadow: 2px 2px 20px white;
 }
 
 .header-secondary {
