--- a/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
@@ -23,7 +23,10 @@ margin-bottom: 10px;
 .header-primary {
 position: relative;
 height:450px;
-text-shadow: 2px 2px 20px white;
+}
+
+.header-primary h1, .header-primary p {
+  text-shadow: 0.7px 0.7px 3px white, 0 0 1px white, 0 0 2px white;
 }
 
 .header-secondary {
