--- a/app/public/wp-content/themes/amera/assets/scss/style.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/style.scss
@@ -977,3 +977,13 @@ ul.sponsor-list li {
   top: 0;
   height:100%;
 }
+
+.pof-br1 {
+  display:none;
+}
+
+@media (min-width: 768px) {
+  .pof-br1 {
+    display:block;
+  }
+}
