--- a/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
@@ -25,8 +25,8 @@ position: relative;
 height:450px;
 }
 
-.header-primary h1, .header-primary p {
-  text-shadow: 0.7px 0.7px 3px white, 0 0 1px white, 0 0 2px white;
+.header-primary h1, .header-primary h3, .header-primary p {
+  text-shadow: 0.7px 0.7px 3px white, 0 0 1px white, 0 0 2px white, 0 0 5px white;
 }
 
 .header-secondary {
