--- a/app/public/wp-content/themes/amera/assets/scss/style.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/style.scss
@@ -205,6 +205,18 @@ img.img--stat {
   box-shadow: 0px 3px 3px 0px rgba(0,0,0,.3);
 }
 
+.img-link-article {
+  display:block;
+  width:100%;
+  position: relative;
+  height:25vh;
+  min-height: 200px;
+  max-height:220px;
+  border-radius: 2px;
+  box-shadow: 0px 3px 3px 0px rgba(0,0,0,.3);
+  margin-bottom:20px;
+}
+
 .img-link:hover {
   color:rgba(255, 255, 255, 0.7);
   font-weight: 400;
@@ -275,6 +287,17 @@ img.img--stat {
   min-height:200px;
   border-radius: 2px;
   background: linear-gradient(90deg, rgb(52, 147, 255), rgba(241, 114, 105, 0.336) 100%),
+}
+
+.img-link--gradient-dark-2 {
+  position: absolute;
+  top:0;
+  left: 0;
+  height:25vh;
+  width:100%;
+  min-height:200px;
+  border-radius: 2px;
+  background: linear-gradient(90deg, rgb(52, 147, 255), rgba(77, 42, 39, 0.336) 100%),
 }
 
 .img-link--img {
