--- a/app/public/wp-content/themes/amera/assets/scss/_color.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/_color.scss
@@ -14,6 +14,7 @@ $fontLightFooter : #aaaaaa;
 
 $backgroundGrey : #f8f8f8;
 $backgroundDarkGrey : #e3e3e3;
+$backgroundLanding : #d1e3ee;
 
 $borderLight : #e3e3e3;
 $borderDark : #d3d3d3;
@@ -31,6 +32,10 @@ $boxShadow : 0px 3px 3px 0px rgba(0,0,0,.3);
 
 .bg-grey {
   background-color: $backgroundGrey;
+}
+
+.bg-landing {
+  background-color: $backgroundLanding;
 }
 
 .bg-white {
