--- a/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_headers.scss
@@ -11,19 +11,25 @@ margin-top: 20px;
 }
 
 .input-header {
-background: #fff; 
-color: $fontDark;
-padding: 0px 15px;
-border: none;
-height:40px;
-width: 260px;
-margin-bottom: 10px;
+  background: #fff; 
+  color: $fontDark;
+  padding: 0px 15px;
+  border: none;
+  height:40px;
+  width: 260px;
+  margin-bottom: 10px;
 }
 
 .header-primary {
-position: relative;
-height:450px;
+  position: relative;
+  height:450px;
 }
+
+.header-p-landing {
+  position: relative;
+  height:550px;
+}
+
 
 .header-primary h1, .header-primary h3, .header-primary p {
   text-shadow: 0.7px 0.7px 3px white, 0 0 1px white, 0 0 2px white, 0 0 5px white;
@@ -142,6 +148,14 @@ background-position: 50% 50%;
   background-size: cover;
   background-position: 50% 50%;
   //background-blend-mode: hard-light;
+}
+
+.header-landing {
+  background: 
+  linear-gradient(90deg, rgba(64, 182, 255, 0.7), rgba(0, 157, 255, 0.473) 100%),
+  url("/wp-content/themes/amera/assets/img/hero/service.jpg");
+  background-size: cover;
+  background-position: 50% 50%;
 }
 
 .header-offering {
